Cleanup and new unit tests